tests/test_assets/semantic/invalid/definite_assignment/self_referential_assignment.cog
self_referential_assignment::() -> void {
    value: i32;
    value = value + 1;
}
