tests/test_assets/semantic/invalid/definite_assignment/self_referential_assignment.expected
semantic error at line 3: variable 'value' may be uninitialized
1 semantic error generated.
